--- a/ui/mainwindow_admin.ui
+++ b/ui/mainwindow_admin.ui
@@ -46,7 +46,209 @@
            <number>20</number>
           </property>
           <item>
-           <widget class="QPushButton" name="add_client">
+           <widget class="QPushButton" name="place_order_btn">
+            <property name="minimumSize">
+             <size>
+              <width>220</width>
+              <height>35</height>
+             </size>
+            </property>
+            <property name="palette">
+             <palette>
+              <active>
+               <colorrole role="WindowText">
+                <brush brushstyle="SolidPattern">
+                 <color alpha="255">
+                  <red>255</red>
+                  <green>255</green>
+                  <blue>255</blue>
+                 </color>
+                </brush>
+               </colorrole>
+               <colorrole role="Button">
+                <brush brushstyle="SolidPattern">
+                 <color alpha="255">
+                  <red>0</red>
+                  <green>0</green>
+                  <blue>255</blue>
+                 </color>
+                </brush>
+               </colorrole>
+               <colorrole role="Text">
+                <brush brushstyle="SolidPattern">
+                 <color alpha="255">
+                  <red>255</red>
+                  <green>255</green>
+                  <blue>255</blue>
+                 </color>
+                </brush>
+               </colorrole>
+               <colorrole role="ButtonText">
+                <brush brushstyle="SolidPattern">
+                 <color alpha="255">
+                  <red>255</red>
+                  <green>255</green>
+                  <blue>255</blue>
+                 </color>
+                </brush>
+               </colorrole>
+               <colorrole role="Base">
+                <brush brushstyle="SolidPattern">
+                 <color alpha="255">
+                  <red>0</red>
+                  <green>0</green>
+                  <blue>255</blue>
+                 </color>
+                </brush>
+               </colorrole>
+               <colorrole role="Window">
+                <brush brushstyle="SolidPattern">
+                 <color alpha="255">
+                  <red>0</red>
+                  <green>0</green>
+                  <blue>255</blue>
+                 </color>
+                </brush>
+               </colorrole>
+              </active>
+              <inactive>
+               <colorrole role="WindowText">
+                <brush brushstyle="SolidPattern">
+                 <color alpha="255">
+                  <red>255</red>
+                  <green>255</green>
+                  <blue>255</blue>
+                 </color>
+                </brush>
+               </colorrole>
+               <colorrole role="Button">
+                <brush brushstyle="SolidPattern">
+                 <color alpha="255">
+                  <red>0</red>
+                  <green>0</green>
+                  <blue>255</blue>
+                 </color>
+                </brush>
+               </colorrole>
+               <colorrole role="Text">
+                <brush brushstyle="SolidPattern">
+                 <color alpha="255">
+                  <red>255</red>
+                  <green>255</green>
+                  <blue>255</blue>
+                 </color>
+                </brush>
+               </colorrole>
+               <colorrole role="ButtonText">
+                <brush brushstyle="SolidPattern">
+                 <color alpha="255">
+                  <red>255</red>
+                  <green>255</green>
+                  <blue>255</blue>
+                 </color>
+                </brush>
+               </colorrole>
+               <colorrole role="Base">
+                <brush brushstyle="SolidPattern">
+                 <color alpha="255">
+                  <red>0</red>
+                  <green>0</green>
+                  <blue>255</blue>
+                 </color>
+                </brush>
+               </colorrole>
+               <colorrole role="Window">
+                <brush brushstyle="SolidPattern">
+                 <color alpha="255">
+                  <red>0</red>
+                  <green>0</green>
+                  <blue>255</blue>
+                 </color>
+                </brush>
+               </colorrole>
+              </inactive>
+              <disabled>
+               <colorrole role="WindowText">
+                <brush brushstyle="SolidPattern">
+                 <color alpha="255">
+                  <red>255</red>
+                  <green>255</green>
+                  <blue>255</blue>
+                 </color>
+                </brush>
+               </colorrole>
+               <colorrole role="Button">
+                <brush brushstyle="SolidPattern">
+                 <color alpha="255">
+                  <red>0</red>
+                  <green>0</green>
+                  <blue>255</blue>
+                 </color>
+                </brush>
+               </colorrole>
+               <colorrole role="Text">
+                <brush brushstyle="SolidPattern">
+                 <color alpha="255">
+                  <red>255</red>
+                  <green>255</green>
+                  <blue>255</blue>
+                 </color>
+                </brush>
+               </colorrole>
+               <colorrole role="ButtonText">
+                <brush brushstyle="SolidPattern">
+                 <color alpha="255">
+                  <red>255</red>
+                  <green>255</green>
+                  <blue>255</blue>
+                 </color>
+                </brush>
+               </colorrole>
+               <colorrole role="Base">
+                <brush brushstyle="SolidPattern">
+                 <color alpha="255">
+                  <red>0</red>
+                  <green>0</green>
+                  <blue>255</blue>
+                 </color>
+                </brush>
+               </colorrole>
+               <colorrole role="Window">
+                <brush brushstyle="SolidPattern">
+                 <color alpha="255">
+                  <red>0</red>
+                  <green>0</green>
+                  <blue>255</blue>
+                 </color>
+                </brush>
+               </colorrole>
+              </disabled>
+             </palette>
+            </property>
+            <property name="font">
+             <font>
+              <pointsize>14</pointsize>
+             </font>
+            </property>
+            <property name="styleSheet">
+             <string notr="true">#place_order_btn {
+   background-color:rgb(0, 0, 255); /* Цвет фона кнопки */
+    border-radius: 10px; /* Устанавливаем радиус закругления углов */
+    color: white; /* Цвет текста кнопки */
+}
+#place_order_btn:hover {
+                background-color: rgb(0, 0, 158)
+}
+
+</string>
+            </property>
+            <property name="text">
+             <string>Оформить заказ</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QPushButton" name="add_client_btn">
             <property name="palette">
              <palette>
               <active>
@@ -225,15 +427,15 @@
              </font>
             </property>
             <property name="styleSheet">
-             <string notr="true">#add_client {
+             <string notr="true">#add_client_btn {
    background-color:rgb(0, 220, 106); /* Цвет фона кнопки */
     border-radius: 10px; /* Устанавливаем радиус закругления углов */
     color: white; /* Цвет текста кнопки */
 }
-#add_client:hover {
+#add_client_btn:hover {
                 background-color:rgb(0, 152, 0)
 }
-#add_client:pressed {
+#add_client_btn:pressed {
 	background-color: rgb(0, 132, 0)
 }
 
@@ -247,7 +449,7 @@
            </widget>
           </item>
           <item>
-           <widget class="QPushButton" name="add_car">
+           <widget class="QPushButton" name="add_car_btn">
             <property name="palette">
              <palette>
               <active>
@@ -426,12 +628,12 @@
              </font>
             </property>
             <property name="styleSheet">
-             <string notr="true">#add_car {
+             <string notr="true">#add_car_btn {
    background-color:rgb(0, 220, 106); /* Цвет фона кнопки */
     border-radius: 10px; /* Устанавливаем радиус закругления углов */
     color: white; /* Цвет текста кнопки */
 }
-#add_car:hover {
+#add_car_btn:hover {
                 background-color:rgb(0, 152, 0);
 }
 
@@ -444,7 +646,7 @@
            </widget>
           </item>
           <item>
-           <widget class="QPushButton" name="add_mechanic">
+           <widget class="QPushButton" name="add_mechanic_btn">
             <property name="palette">
              <palette>
               <active>
@@ -623,15 +825,15 @@
              </font>
             </property>
             <property name="styleSheet">
-             <string notr="true">#add_mechanic {
+             <string notr="true">#add_mechanic_btn {
    background-color:rgb(0, 220, 106); /* Цвет фона кнопки */
     border-radius: 10px; /* Устанавливаем радиус закругления углов */
     color: white; /* Цвет текста кнопки */
 }
-#add_mechanic:hover {
+#add_mechanic_btn:hover {
                 background-color:rgb(0, 152, 0)
 }
-#add_mechanic:pressed {
+#add_mechanic_btn:pressed {
 	background-color: rgb(0, 132, 0)
 }
 
