--- a/ui/mainwindow_admin.ui
+++ b/ui/mainwindow_admin.ui
@@ -646,7 +646,13 @@
            </widget>
           </item>
           <item>
-           <widget class="QPushButton" name="add_mechanic_btn">
+           <widget class="QPushButton" name="merge_clients_and_car_btn">
+            <property name="minimumSize">
+             <size>
+              <width>220</width>
+              <height>35</height>
+             </size>
+            </property>
             <property name="palette">
              <palette>
               <active>
@@ -663,8 +669,8 @@
                 <brush brushstyle="SolidPattern">
                  <color alpha="255">
                   <red>0</red>
-                  <green>220</green>
-                  <blue>106</blue>
+                  <green>0</green>
+                  <blue>255</blue>
                  </color>
                 </brush>
                </colorrole>
@@ -690,8 +696,8 @@
                 <brush brushstyle="SolidPattern">
                  <color alpha="255">
                   <red>0</red>
-                  <green>220</green>
-                  <blue>106</blue>
+                  <green>0</green>
+                  <blue>255</blue>
                  </color>
                 </brush>
                </colorrole>
@@ -699,8 +705,8 @@
                 <brush brushstyle="SolidPattern">
                  <color alpha="255">
                   <red>0</red>
-                  <green>220</green>
-                  <blue>106</blue>
+                  <green>0</green>
+                  <blue>255</blue>
                  </color>
                 </brush>
                </colorrole>
@@ -719,8 +725,8 @@
                 <brush brushstyle="SolidPattern">
                  <color alpha="255">
                   <red>0</red>
-                  <green>220</green>
-                  <blue>106</blue>
+                  <green>0</green>
+                  <blue>255</blue>
                  </color>
                 </brush>
                </colorrole>
@@ -746,8 +752,8 @@
                 <brush brushstyle="SolidPattern">
                  <color alpha="255">
                   <red>0</red>
-                  <green>220</green>
-                  <blue>106</blue>
+                  <green>0</green>
+                  <blue>255</blue>
                  </color>
                 </brush>
                </colorrole>
@@ -755,8 +761,8 @@
                 <brush brushstyle="SolidPattern">
                  <color alpha="255">
                   <red>0</red>
-                  <green>220</green>
-                  <blue>106</blue>
+                  <green>0</green>
+                  <blue>255</blue>
                  </color>
                 </brush>
                </colorrole>
@@ -775,8 +781,8 @@
                 <brush brushstyle="SolidPattern">
                  <color alpha="255">
                   <red>0</red>
-                  <green>220</green>
-                  <blue>106</blue>
+                  <green>0</green>
+                  <blue>255</blue>
                  </color>
                 </brush>
                </colorrole>
@@ -802,8 +808,8 @@
                 <brush brushstyle="SolidPattern">
                  <color alpha="255">
                   <red>0</red>
-                  <green>220</green>
-                  <blue>106</blue>
+                  <green>0</green>
+                  <blue>255</blue>
                  </color>
                 </brush>
                </colorrole>
@@ -811,8 +817,8 @@
                 <brush brushstyle="SolidPattern">
                  <color alpha="255">
                   <red>0</red>
-                  <green>220</green>
-                  <blue>106</blue>
+                  <green>0</green>
+                  <blue>255</blue>
                  </color>
                 </brush>
                </colorrole>
@@ -821,28 +827,25 @@
             </property>
             <property name="font">
              <font>
-              <pointsize>16</pointsize>
+              <pointsize>14</pointsize>
              </font>
             </property>
             <property name="styleSheet">
-             <string notr="true">#add_mechanic_btn {
-   background-color:rgb(0, 220, 106); /* Цвет фона кнопки */
+             <string notr="true">#merge_clients_and_car_btn {
+   background-color:rgb(0, 0, 255); /* Цвет фона кнопки */
     border-radius: 10px; /* Устанавливаем радиус закругления углов */
     color: white; /* Цвет текста кнопки */
 }
-#add_mechanic_btn:hover {
-                background-color:rgb(0, 152, 0)
+#merge_clients_and_car_btn:hover {
+                background-color: rgb(0, 0, 158)
 }
-#add_mechanic_btn:pressed {
-	background-color: rgb(0, 132, 0)
-}
-
-
 
 </string>
             </property>
             <property name="text">
-             <string>Добавить работника</string>
+             <string>Объдинение
+ автомобилей
+ и их владельцев</string>
             </property>
            </widget>
           </item>
