--- a/ui/add_car_dialog.ui
+++ b/ui/add_car_dialog.ui
@@ -140,7 +140,7 @@
       <string/>
      </property>
      <property name="placeholderText">
-      <string>Введите номер телефона клиента</string>
+      <string>Введите цвет</string>
      </property>
     </widget>
    </item>
