--- a/ui/mainwindow_admin.ui
+++ b/ui/mainwindow_admin.ui
@@ -17,7 +17,7 @@
    </sizepolicy>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>MostovCarSrvice</string>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color:rgb(237, 235, 255)</string>
